<resources>
    <string name="app_name">能购APP</string>
    <!--recyclerView Layout-->
    <string name="layoutManager_Gridlayout">GridLayoutManager</string>
    <string name="layoutManager_LinearLayout">LinearLayoutManager</string>
    <!--权限-->
    <string name="common_request_permission">该操作需要开通权限</string>
    <string name="common_allow_permission">允许</string>

    <string name="snack_bar_exception_msg">请基于BaseActivity和BaseFragment来设计</string>
    <!--登录模块-->
    <string name="input_account_number">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="login_in">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="immediate_registration">立即注册</string>
    <string name="other_login_in">其他登入方式</string>
    <string name="check_network">网络不给力，稍后再试试吧</string>
    <string name="invalid_account_input">请输入正确的手机号</string>
    <string name="empty_account">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="input_verificationcode">请输入验证码</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="sms_login_explain">未注册能购的手机号，登录时将自动注册</string>
    <string name="button_send_auth_code">发送验证码</string>
    <string name="input_sms_verificationcode">请输入手机验证码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="registration_agreement">我已阅读并同意《能购用户协议》</string>
    <string name="register">注册</string>
    <string name="login_auth_code_sent">验证码已发送至您的手机,请注意查收</string>
    <string name="set_passwrod">设置密码</string>

    <!--主框架-->
    <string name="homepage">首页</string>
    <string name="nearby">附近</string>
    <string name="shoppingmall">商城</string>
    <string name="energy">能量</string>
    <string name="mine">我的</string>

    <!--刷新-->
    <string name="bottom_pull_refresh_content">刷新并查看服务项目</string>
    <string name="top_pull_refresh_content">松开刷新</string>
    <string name="top_pull_go_home_content">松开回到首页</string>

    <!--首页-->
    <string name="guess_like">猜你喜欢</string>
    <string name="choice_city">选择城市</string>
    <string name="choice_shop">搜索商家，店铺</string>
    <string name="scan_qr_code">扫描二维码</string>
    <!--我的-->
    <string name="collection">收藏</string>
    <string name="comment">点评</string>
    <string name="account">账单</string>
    <string name="voucher">抵用券</string>
    <string name="browse_records">浏览记录</string>
    <string name="customer_service_center">客服中心</string>
    <string name="want_cooperate">我要合作</string>
    <string name="about_neng">关于能购</string>
    <string name="persion_homepage">个人主页</string>
    <string name="daily_management">日常管理</string>
    <string name="good_management">好的管理会让收入变多哦......</string>
    <string name="yesterday">昨日</string>
    <string name="this_month">本月</string>
    <string name="cumulative">累计</string>

    <!--商品详情-->
    <string name="back_energy">返能量</string>
    <string name="more_shop">更多商家</string>
    <string name="pay_order">支付订单</string>
    <string name="store_cash_reel">店铺现金抵用券</string>
    <string name="add_note">添加备注（20字以内）</string>
    <string name="confirm_payment">确认支付</string>
    <string name="coupon">优惠券</string>
    <string name="rdcode">我的推荐码</string>
    <string name="pay_result">支付结果</string>
    <string name="complete">完成</string>

    <!--收藏-->
    <string name="my_collection">我的收藏</string>

    <string name="cancel">取消</string>
    <string name="action_confirm">确定</string>
    <string name="service_phone_number">4008–262–056</string>
    <!--账单-->
    <string name="account_detail">账单详情</string>
    <string name="screen">筛选</string>
    <string name="payment_method">付款明细</string>
    <string name="commodity_description">商品说明</string>
    <string name="created_at">创建时间</string>
    <string name="order_number">订单号</string>
    <string name="merchant_order_number">商户订单号</string>
    <string name="see_intercourse_record">查看来往记录</string>
    <string name="successful_trade">交易成功</string>
    <string name="choose_time">选择时间</string>
    <!--优惠券-->
    <!--能量-->
    <string name="energy_income_detail">能量收支明细</string>
    <!--设置-->
    <string name="setting">设置</string>
    <string name="shift_handset">换绑手机</string>
    <string name="user_password">用户密码</string>
    <string name="user_protocol">用户协议</string>
    <string name="new_version_detection">新版本检测</string>
    <string name="login_out">退出当前账号</string>
    <string name="persional_im">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="change_nickname">修改用户名</string>
    <string name="add_new_nickname">请输入新昵称</string>
    <string name="change_head">更改头像</string>

    <!--评价-->
    <string name="netizen_evaluation">用户评价</string>
    <string name="evaluation">评价</string>

    <!--地址-->
    <string name="select_address">选择地址</string>
    <string name="search_address">请输入您的收货地址</string>
    <string name="item_address">收货地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="consignee">收货人</string>
    <string name="phone_number">手机号码</string>
    <string name="region">地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <!--能量-->
    <string name="energy_center">能量中心</string>
    <!--订单-->
    <string name="order_list">订单列表</string>
    <string name="order_detail">订单详情</string>
    <string name="logistics_details">物流详情</string>
    
    <!--商城-->
    <string name="search_commodity">搜索你想要的宝贝</string>
    <string name="sort_sales_volume">销量</string>
    <string name="sort_voucher">劵额</string>
    <string name="sort_price">价格</string>
    <string name="voucher_duration">可购商品剩余时间</string>
    <string name="goods_detail">商品详情</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="purchase">立即购买</string>
    <string name="shopping_cart">购物车</string>
    <string name="settlement">结算</string>
    <string name="total_selection">全选</string>
    <string name="history_records">历史记录</string>
    <string name="fill_in_order">填写订单</string>
    <string name="default_address">默认</string>
    <string name="confirm">确认</string>
    <string name="use_commercial_voucher">使用能购劵</string>
    <string name="confirm_purchase">确认购买</string>
    <string name="place_order">提交订单</string>
    <string name="my_order">我的订单</string>
    <string name="goods_total_price">商品总额</string>
    <string name="freight">运费</string>
    <string name="ng_voucher">能购劵</string>
    <string name="real_payment">实付款</string>
    <string name="pay_type">付款方式</string>
    <string name="pay_time">支付时间</string>
    <string name="goods_order_number">订单编号</string>
    <string name="place_order_time">下单时间</string>
    <string name="distribution_type">配送方式</string>
    <string name="choice_order_pay">选择付款方式</string>

    <string name="ecvocher">兑换券</string>

    <string name="all_categories">全部分类</string>
    <string name="search_map_address">搜索地点</string>

    <!--支付密码-->
    <string name="pay_password">支付密码</string>
    <string name="setting_six_password">请设置6位数字支付密码</string>
    <string name="only_to_pay_energy">此密码用于仅使用能量支付时</string>
    <string name="pay_password_can_not_be_repeated">支付密码不能重复、连续的数字</string>
    <string name="input_again">请再次输入确认</string>
    <string name="input_pw_to_authentication">输入支付密码,完成身份验证</string>
    <string name="remember">记得</string>
    <string name="do_not_remember">不记得</string>
    <string name="input_pay_password">请输入支付密码</string>
    <string name="confirm_setting">确认设置</string>
    <string name="modify_pay_pw">修改支付密码</string>
    <string name="send_sms_to_authentication">发送短信验证码到绑定的手机,完成身份验证</string>

    <!--添加银行卡和提现-->
    <string name="apply_vip">申请Vip</string>
    <string name="input_id_number">请填写身份证号</string>
    <string name="id_number">身份证号</string>
    <string name="input_name">请填写真实姓名</string>
    <string name="real_name">真实姓名</string>
    <string name="untying">解绑</string>
    <string name="savings_deposit_card">储蓄卡</string>
    <string name="add_bankcard">添加银行卡</string>
    <string name="choice_bank">请选择银行卡类型</string>
    <string name="user_im">请填写个人信息</string>
    <string name="information_encryption">信息加密处理,仅用于银行验证</string>
    <string name="bankcard_name">持卡人姓名</string>
    <string name="input_cardnumber">请填写银行卡号</string>
    <string name="card_number">银行卡号</string>
    <string name="my_bankcard">我的银行卡</string>
    <string name="go_to_cash">去提现</string>
    <string name="commission">佣金</string>
    <string name="put_forward">提现</string>
    <string name="present_record">提现记录</string>

    <string name="arrival_explain">预计次日到账，具体信息以银行提醒为准</string>
    <string name="comfirm_putforward">确认提现</string>
    <string name="putforward_detail">提现详情</string>
    <string name="current_state">当前状态</string>
    <string name="putforward_type">类型</string>
    <string name="putforward_number">提现金额</string>
    <string name="apply_time">提现申请时间</string>
    <string name="reach_time">提现到账时间</string>
    <string name="putforward_bank">提现银行</string>
    <string name="putforward_orderno">提现单号</string>
    
</resources>
